--- a/community-outreach.html
+++ b/community-outreach.html
@@ -116,6 +116,26 @@
                     </div>
                 </div>
 
+		<div class="section-header">
+                    <h3>Upcoming Events</h3>
+                </div>
+		    
+		button type="button" class="collapsible">Go ENG Girl: Fall 2023</button>
+                <div class="content">
+                    <!img src="img/marketing/PwC.png" width="100%" height="650">
+			<p><b>Go ENG Girl: Fall 2023</b> </p>
+			<p><b>About the Workshop</b>: Calling all Girls and Non-binary Youth! </p>
+			<p>You probably know that engineers build bridges. But do you know that they write computer software? Investigate new ways to bring clean water to communities? Design medical devices that are changing the face of healthcare?</p>
+			<p>Come find out why an increasing number of women and non-binary folks are choosing engineering as their path to an exciting career that offers academic challenge, cutting-edge technology, and the opportunity to make the world a better place.</p>
+			<p>Go ENG Girl offers girls and non-binary youth in grades 7-10 the chance to learn more about engineering through a series of fun hands-on activities and exhibits. Women undergraduate students, professional engineers, and professors take part in the day to share their stories of passion, inspiration, and success.</p>
+			
+			<b>About Sanofi</b>: We are an innovative global healthcare company, driven by one purpose: we chase the miracles of science to improve people’s lives. Our teams across the world strive to transform the practice of medicine, turning the impossible into the possible for patients. We provide potentially life-changing treatments and the protection of life-saving vaccines to millions of people, and affordable access to our medicines in some of the world’s poorest countries.</p>
+			<p><b>Event:</b> Sanofi NA Workshop: Top Tips & Tricks to Showcase Your Expertise in a Job Interview</p>
+			<p><b>Date:</b> Saturday, November 25, 2023</p>
+			<p><b>Time:</b> 9:00 AM - 3:00 PM EST</p>
+			<p>You may complete the form through this link to access the registration link for the event: <a href="https://campscui.active.com/orgs/EngineeringOutreachUniversityofToronto?season=3399641">Click Here!</a> </p>                   
+                </div>
+
                 <div class="section-header">
                     <h4>Main Contact</h4>
                 </div>
