Update our-team.html (test)
testing out

--- a/our-team.html
+++ b/our-team.html
@@ -93,7 +93,7 @@
     <section id="team">
         <div class="container">
             <div class="section-header">
-                <h3>Meet the WISE UofT 2022-2023 Executive Team</h3>
+                <h3>Meet the WISE UofT 2023-2024 Executive Team</h3>
             </div>
             <!--=====Co-Presidents=====-->
             <div id = "team-leads" class="section-header">
@@ -102,17 +102,17 @@
             <div class="row justify-content-md-center">
                 <div class="col-lg-3 col-md-5 ">
                     <div class="member" data-toggle="modal" data-target="#hanas"> 
-                        <img src="img/team-2021/Hana 1.jpg" class="img-fluid"
+                        <!--img src="img/team-2021/Hana 1.jpg" class="img-fluid"
                         onmouseover="this.src='img/team-2021/Hana 2.jpg';"
-                        onmouseout="this.src='img/team-2021/Hana 1.jpg';">
+                        onmouseout="this.src='img/team-2021/Hana 1.jpg';"-->
                         <div class="member-info">
                             <div class="member-info-content">
-                                <h4>Hana Sharifi</h4>
+                                <h4>Sophie Sun</h4>
                                 <span>Co-President</span>
-                                <h5>Physiology & EEB</h5>
+                                <h5>Engineering Science</h5>
                                 <div class="social">
                                     <a href="mailto:president@wiseuoft.org"><i class="fa fa-envelope"></i></a>
-                                    <a href="https://www.linkedin.com/in/hanasharifi/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                    <a href="www.linkedin.com/in/sophiesun01" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
                         </div>
