--- a/community-outreach.html
+++ b/community-outreach.html
@@ -120,7 +120,7 @@
                     <h3>Upcoming Events</h3>
                 </div>
 		    
-		button type="button" class="collapsible">Go ENG Girl: Fall 2023</button>
+		<button type="button" class="collapsible">Go ENG Girl: Fall 2023</button>
                 <div class="content">
                     <!img src="img/marketing/PwC.png" width="100%" height="650">
 			<p><b>Go ENG Girl: Fall 2023</b> </p>
