--- a/our-team.html
+++ b/our-team.html
@@ -101,7 +101,8 @@
             </div>
             <div class="row justify-content-md-center">
                 <div class="col-lg-3 col-md-5 ">
-                    <div class="member" data-toggle="modal" data-target="#hanas"> 
+                    <div class="color-box"></div>
+                    <! -- div class="member" data-toggle="modal" data-target="#hanas"--> 
                         <!--img src="img/team-2021/Hana 1.jpg" class="img-fluid"
                         onmouseover="this.src='img/team-2021/Hana 2.jpg';"
                         onmouseout="this.src='img/team-2021/Hana 1.jpg';"-->
