--- a/our-team.html
+++ b/our-team.html
@@ -102,10 +102,11 @@
             <div class="row justify-content-md-center">
                 <div class="col-lg-3 col-md-5 ">
                     <div class="color-box"></div>
-                    <! -- div class="member" data-toggle="modal" data-target="#hanas"--> 
+                    <div class="member" data-toggle="modal" data-target="#hanas"> 
                         <!--img src="img/team-2021/Hana 1.jpg" class="img-fluid"
                         onmouseover="this.src='img/team-2021/Hana 2.jpg';"
                         onmouseout="this.src='img/team-2021/Hana 1.jpg';"-->
+                        <img src="img/color1.jpg" class="img-fluid">
                         <div class="member-info">
                             <div class="member-info-content">
                                 <h4>Sophie Sun</h4>
@@ -122,17 +123,18 @@
 
                 <div class="col-lg-3 col-md-5 ">
                     <div class="member" data-toggle="modal" data-target="#christinaw">
-                        <img src="img/team/Christina Wong 1.jpeg" class="img-fluid"
+                        <!img src="img/team/Christina Wong 1.jpeg" class="img-fluid"
                         onmouseover="this.src='img/team/Christina Wong 2.jpeg';"
-                        onmouseout="this.src='img/team/Christina Wong 1.jpeg';">
+                        onmouseout="this.src='img/team/Christina Wong 1.jpeg';"-->
+                        <img src="img/color2.jpg" class="img-fluid">
                         <div class="member-info">
                             <div class="member-info-content-long">
-                                <h4>Christina Wong</h4>
+                                <h4>Armita Khashayardoost</h4>
                                 <span>Co-President</span>
-                                <h5>Translational Research Program in the Health Sciences</h5>
+                                <h5>Engineering Science</h5>
                                 <div class="social">
                                     <a href="mailto:president@wise.skule.ca"><i class="fa fa-envelope"></i></a>
-                                    <a href="https://www.linkedin.com/in/christinanjwong/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                    <a href="https://www.linkedin.com/in/armitadoost/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
                         </div>
