--- a/our-team.html
+++ b/our-team.html
@@ -128,7 +128,7 @@
                         onmouseout="this.src='img/team/Christina Wong 1.jpeg';"-->
                         <img src="img/color1.jpg" class="img-fluid">
                         <div class="member-info">
-                            <div class="member-info-content-long">
+                            <div class="member-info-content">
                                 <h4>Armita Khashayardoost</h4>
                                 <span>Co-President</span>
                                 <h5>Engineering Science</h5>
@@ -178,7 +178,7 @@
                             <div class="member-info-content">
                                 <h4>Maansi Suri</h4>
                                 <span>External Affairs Director</span>
-                                <h5><br></h5>
+                                <h5>Mechanical Engineering</h5>
                                 <div class="social">
                                     <a href="mailto:president@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/maansi-suri-574243194/" target="_blank"><i class="fa fa-linkedin"></i></a>
@@ -197,8 +197,8 @@
                         <div class="member-info">
                             <div class="member-info-content">
                                 <h4>Mehak Afzal</h4>
-                                <span>Mechanical Engineering</span>
-                                <h5><br></h5>
+                                <span>External Affairs Director</span>
+                                <h5>Mechanical Engineering</h5>
                                 <div class="social">
                                     <a href="mailto:president@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/mehak-afzal-3a95991b5/" target="_blank"><i class="fa fa-linkedin"></i></a>
@@ -611,7 +611,7 @@
                         onmouseout="this.src='img/team-2021/Armita Doost 1.jpg';">-->
                         <img src="img/color1.jpg" class="img-fluid">
                         <div class="member-info">
-                            <div class="member-info-content">
+                            <div class="member-info-content-long">
                                 <h4>Sabrina Zhu</h4>
                                 <span>VP Professional Development</span>
                                 <h5>Laboratory Medicine and Pathobiology, Immunology</h5>
@@ -775,7 +775,7 @@
                         onmouseout="this.src='img/team-2022/Lina Jin 1.png';">-->
                         <img src="img/color1.jpg" class="img-fluid">
                         <div class="member-info">
-                            <div class="member-info-content">
+                            <div class="member-info-content-long">
                                 <h4>Nicole Sun</h4>
                                 <span>Community Outreach Co-Director</span>
                                 <h5>Laboratory Medicine and Pathobiology, Immunology, Computer Science</h5>
@@ -875,7 +875,7 @@
                         onmouseout="this.src='img/team-2022/Anne Huynh 1.jpg';">-->
                         <img src="img/color1.jpg" class="img-fluid">
                         <div class="member-info">
-                            <div class="member-info-content">
+                            <div class="member-info-content-long">
                                 <h4>Adanna Nmezi</h4>
                                 <span>Outreach Special Events Co-Director</span>
                                 <h5>Cell and Molecular Biology and Immunology</h5>
@@ -895,7 +895,7 @@
                         onmouseout="this.src='img/team-2022/Abeer Fatima 1.jpg';">-->
                         <img src="img/color1.jpg" class="img-fluid">
                         <div class="member-info">
-                            <div class="member-info-content">
+                            <div class="member-info-content-long">
                                 <h4>Angitha Mriduraj</h4>
                                 <span>High School Mentorship Director</span>
                                 <h5>Cell and Molecular Biology and Immunology</h5>
@@ -1099,7 +1099,7 @@
                         onmouseout="this.src='img/team-2022/Ishika Mittal 1.jpg';">-->
                         <img src="img/color1.jpg" class="img-fluid">
                         <div class="member-info">
-                            <div class="member-info-content">
+                            <div class="member-info-content-long">
                                 <h4>Lina Jin</h4>
                                 <span>Conference Operations Associate Director</span>
                                 <h5>Computer Science and Statistics</h5>
@@ -1119,7 +1119,7 @@
                         onmouseout="this.src='img/team-2022/Ishika Mittal 1.jpg';">-->
                         <img src="img/color1.jpg" class="img-fluid">
                         <div class="member-info">
-                            <div class="member-info-content">
+                            <div class="member-info-content-long">
                                 <h4>Nuzaira Habib</h4>
                                 <span>Conference Operations Associate Director</span>
                                 <h5>Engineering Science</h5>
@@ -1139,7 +1139,7 @@
                         onmouseout="this.src='img/team-2022/Ishika Mittal 1.jpg';">-->
                         <img src="img/color1.jpg" class="img-fluid">
                         <div class="member-info">
-                            <div class="member-info-content">
+                            <div class="member-info-content-long">
                                 <h4>Tina Do</h4>
                                 <span>Conference Operations Associate Director</span>
                                 <h5>Immunology, Health + Disease, Physiology</h5>
@@ -1220,7 +1220,7 @@
                         onmouseout="this.src='img/team-2022/Sanjmi Khurana 1.jpg';">-->
                         <img src="img/color1.jpg" class="img-fluid">
                         <div class="member-info">
-                            <div class="member-info-content">
+                            <div class="member-info-content-long">
                                 <h4>Sanjmi Khurana</h4>
                                 <span>Conference Business Relations Director</span>
                                 <h5>Engineering Science</h5>
@@ -1239,7 +1239,7 @@
                         onmouseout="this.src='img/team-2022/Sanjmi Khurana 1.jpg';">-->
                         <img src="img/color1.jpg" class="img-fluid">
                         <div class="member-info">
-                            <div class="member-info-content">
+                            <div class="member-info-content-long">
                                 <h4>Sophia Joulaei</h4>
                                 <span>Conference Business Relations Director</span>
                                 <h5>Psychology</h5>
@@ -1258,7 +1258,7 @@
                         onmouseout="this.src='img/team-2022/Sanjmi Khurana 1.jpg';">-->
                         <img src="img/color1.jpg" class="img-fluid">
                         <div class="member-info">
-                            <div class="member-info-content">
+                            <div class="member-info-content-long">
                                 <h4>Esther Zhou</h4>
                                 <span>Conference Business Relations Director</span>
                                 <h5>Engineering Science</h5>
@@ -1278,7 +1278,7 @@
                         onmouseout="this.src='img/team-2022/Sanjmi Khurana 1.jpg';">-->
                         <img src="img/color1.jpg" class="img-fluid">
                         <div class="member-info">
-                            <div class="member-info-content">
+                            <div class="member-info-content-long">
                                 <h4>Alishba Mansoor</h4>
                                 <span>Conference Business Relations Director</span>
                                 <h5>Human Biology and Psychology</h5>
@@ -1298,7 +1298,7 @@
                         onmouseout="this.src='img/team-2022/Kashish Mistry 1.jpg';">-->
                         <img src="img/color1.jpg" class="img-fluid">
                         <div class="member-info">
-                            <div class="member-info-content">
+                            <div class="member-info-content-long">
                                 <h4>Prarthona Paul </h4>
                                 <span>Conference Academic Relations Director </span>
                                 <h5>Computer Engineering</h5>
@@ -1318,7 +1318,7 @@
                         onmouseout="this.src='img/team-2022/Sophie Sun 1.jpg';">-->
                         <img src="img/color1.jpg" class="img-fluid">
                         <div class="member-info">
-                            <div class="member-info-content">
+                            <div class="member-info-content-long">
                                 <h4>Helen Li</h4>
                                 <span>Conference Webmaster</span>
                                 <h5>Computer Science and Statistics</h5>
