--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <li><a href="#about">Our Mission</a></li>
                             <li><a href="our-team.html">Our Team</a></li>
                             <li><a href="sponsors.html">Our Sponsors</a></li>
-                            <li><a href="https://wiseuoft.us4.list-manage.com/subscribe?u=e3db15855c7566e653f237487&id=44d045902f" target="_blank">Our Newsletter</a></li>
+                            <li><a href="https://forms.gle/Rs7u2LsBviyaWunc6" target="_blank">Our Newsletter</a></li>
                             <li><a href="#footer">Contact Us</a></li>
                         </ul>
                     </li>
@@ -226,7 +226,7 @@
                             <a href="https://twitter.com/WISEUofT" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
                             <a href="https://www.linkedin.com/company/women-in-science-and-engineering-university-of-toronto-chapter/" 
                                 target="_blank" class="linkedin"><i class="fa fa-linkedin"></i></a>
-                            <a href="https://wiseuoft.us4.list-manage.com/subscribe?u=e3db15855c7566e653f237487&id=44d045902f"
+                            <a href="https://forms.gle/Rs7u2LsBviyaWunc6"
                                 target="_blank" class="newspaper"><i class="fa fa-newspaper-o"></i></a>
                         </div>
                     </div>
