--- a/events.html
+++ b/events.html
@@ -58,7 +58,7 @@
                             <li><a href="index.html#about">Our Mission</a></li>
                             <li><a href="our-team.html">Our Team</a></li>
                             <li><a href="sponsors.html">Our Sponsors</a></li>
-                            <li><a href="https://wiseuoft.us4.list-manage.com/subscribe?u=e3db15855c7566e653f237487&id=44d045902f" target="_blank">Our Newsletter</a></li>
+                            <li><a href="https://forms.gle/Rs7u2LsBviyaWunc6" target="_blank">Our Newsletter</a></li>
                             <li><a href="#footer">Contact Us</a></li>
                         </ul>
                     </li>
@@ -94,7 +94,7 @@
             <div class="container">
                 <header class="section-header">
                     <h3>Upcoming Events</h3>
-                    <p>To get the latest updates on our upcoming events and recruitment, please subscribe to our <a href="https://wiseuoft.us4.list-manage.com/subscribe?u=e3db15855c7566e653f237487&id=44d045902f" target="_blank">newsletter</a>, 
+                    <p>To get the latest updates on our upcoming events and recruitment, please subscribe to our <a href="https://forms.gle/Rs7u2LsBviyaWunc6" target="_blank">newsletter</a>, 
                         or like our <a href="https://www.facebook.com/WISE.UofT.Chapter/" target="_blank">Facebook Page</a>.</p>
                 </header>
 
@@ -172,7 +172,7 @@
                             <a href="https://twitter.com/WISEUofT" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
                             <a href="https://www.linkedin.com/company/women-in-science-and-engineering-university-of-toronto-chapter/" 
                                 target="_blank" class="linkedin"><i class="fa fa-linkedin"></i></a>
-                            <a href="https://wiseuoft.us4.list-manage.com/subscribe?u=e3db15855c7566e653f237487&id=44d045902f"
+                            <a href="https://forms.gle/Rs7u2LsBviyaWunc6"
                                 target="_blank" class="newspaper"><i class="fa fa-newspaper-o"></i></a>
                         </div>
                     </div>
