Updating upcoming events, go eng girl (#2)

--- a/events.html
+++ b/events.html
@@ -121,7 +121,7 @@
                                     
                                     Go ENG Girl offers girls and non-binary youth in grades 7-10 the chance to learn more about engineering through a series of fun hands-on activities and exhibits. Women undergraduate students, professional engineers, and professors take part in the day to share their stories of passion, inspiration, and success.
                                 </p>
-                                <a href="https://campscui.active.com/orgs/EngineeringOutreachUniversityofToronto?season=3399641" target="_blank" class="btn-current">Get your ticket today!</a>
+                                <a href="https://campscui.active.com/orgs/EngineeringOutreachUniversityofToronto?season=3399641" target="_blank" class="btn-current">Register today!</a>
                             </div>
                         </div>
                     </div>
