Update oppurtunities and our team page with bios

--- a/opportunities.html
+++ b/opportunities.html
@@ -162,15 +162,59 @@
                 <button type="button" class="collapsible">Sanofi Workshop Series: Top Tips & Tricks to Showcase Your Expertise in a Job Interview!</button>
                 <div class="content">
                     <!img src="img/marketing/PwC.png" width="100%" height="650">
-			<p>Sanofi is hosting the second of a three part development workshop series for the Fall 2023 season, <b>NA Sanofi Workshop Series: Top Tips & Tricks to Showcase Your Expertise in a Job Interview!</b> </p>
-			<p><b>About the Workshop</b>: Interviews can sometimes feel so intimidating, but the good news is that they don’t have to be! Join the development workshop session and learn some quick tips and tricks with how to showcase your experiences in a meaningful way. You will also have the opportunity to hear from Sanofi Early Career hires on their interview experiences and also from a recruiter’s perspective on the key things to do and what not to not do.</p>
-			<b>About Sanofi</b>: We are an innovative global healthcare company, driven by one purpose: we chase the miracles of science to improve people’s lives. Our teams across the world strive to transform the practice of medicine, turning the impossible into the possible for patients. We provide potentially life-changing treatments and the protection of life-saving vaccines to millions of people, and affordable access to our medicines in some of the world’s poorest countries.</p>
-			<p><b>Event:</b> Sanofi NA Workshop: Top Tips & Tricks to Showcase Your Expertise in a Job Interview</p>
-			<p><b>Date:</b> Tuesday, October 10, 2023</p>
-			<p><b>Time:</b> 5:00 - 6:00 PM EST</p>
-			<p>You may complete the form through this link to access the registration link for the event: <a href="https://smrtr.io/gCcQb">Click Here!</a> </p>
-			<p>Please make sure to complete your registration <b>on or before October 3, 2023 at 5pm EST. </b></p>
-                    
+                    <p>Sanofi is hosting the second of a three part development workshop series for the Fall 2023 season, <b>NA Sanofi Workshop Series: Top Tips & Tricks to Showcase Your Expertise in a Job Interview!</b> </p>
+                    <p><b>About the Workshop</b>: Interviews can sometimes feel so intimidating, but the good news is that they don’t have to be! Join the development workshop session and learn some quick tips and tricks with how to showcase your experiences in a meaningful way. You will also have the opportunity to hear from Sanofi Early Career hires on their interview experiences and also from a recruiter’s perspective on the key things to do and what not to not do.</p>
+                    <b>About Sanofi</b>: We are an innovative global healthcare company, driven by one purpose: we chase the miracles of science to improve people’s lives. Our teams across the world strive to transform the practice of medicine, turning the impossible into the possible for patients. We provide potentially life-changing treatments and the protection of life-saving vaccines to millions of people, and affordable access to our medicines in some of the world’s poorest countries.</p>
+                    <p><b>Event:</b> Sanofi NA Workshop: Top Tips & Tricks to Showcase Your Expertise in a Job Interview</p>
+                    <p><b>Date:</b> Tuesday, October 10, 2023</p>
+                    <p><b>Time:</b> 5:00 - 6:00 PM EST</p>
+                    <p>You may complete the form through this link to access the registration link for the event: <a href="https://smrtr.io/gCcQb">Click Here!</a> </p>
+                    <p>Please make sure to complete your registration <b>on or before October 3, 2023 at 5pm EST. </b></p>
+                </div>
+
+                <button type="button" class="collapsible">Google Summer 2024 Internship Opportunities!</button>
+                <div class="content">
+                    <!img src="img/marketing/PwC.png" width="100%" height="650">
+                    <p>If you are graduating December 2024 or later check out these Summer 
+                        2024  internships. Visit <a href="http://google.com/students">google.com/students</a> to apply!</p>
+                    <p>Are you looking for more Google content and resources?
+                        <a href="https://careersonair.withgoogle.com/">Google Careers OnAir</a> is a virtual event center that provides students and professionals with career focused material from Googlers. 
+                        Register for upcoming livestreams, watch previously-aired events on demand, and let us help you get one step closer to your future. Visit 
+                        <a href="https://careersonair.withgoogle.com/">Careers OnAir</a>, as well as the <a href="https://buildyourfuture.withgoogle.com/?utm_medium=jobposting&utm_source=email&utm_campaign=byf-postevent&src=Online/TOPs/NA%20Tech%20University%20Email">Build Your Future site</a> 
+                        to keep exploring.</p>
+                    <p><b>Open roles</b> - Apply early! The following student job opportunities are now open! All available roles can be found on <a href="http://google.com/students">google.com/students</a></p>
+                    <p><b>Internships, Summer 2024</b></p>
+                    <ul>
+                        <li><b>Now Open! Monday, October 2 - Friday, November 3</b></li>
+                            <ul>
+                                <li><b>Bachelors - 3rd year students</b></li>
+                                    <ul>
+                                        <li><a href="https://www.google.com/about/careers/applications/jobs/results/112724967109337798-software-engineering-intern-bs-summer-2024?utm_medium=direct_message&utm_source=email&utm_campaign=SWEInternBS2024-postevent&src=Online/TOPs/NA%20Tech%20University%20Email">Software Engineering Intern, BS, Summer 2024 </a>- USA</li>
+                                        <li><a href="https://www.google.com/about/careers/applications/jobs/results/100145136748372678-software-developer-intern-bs-summer-2024?utm_medium=direct_message&utm_source=email&utm_campaign=SWEInternBS2024Canada-postevent&src=Online/TOPs/NA%20Tech%20University%20Email">Software Developer Intern, BS, Summer 2024 </a>- Canada</li>
+                                    </ul>
+                                <li><b>Masters & PhD students</b></li>
+                                    <ul>
+                                        <li><a href="https://www.google.com/about/careers/applications/jobs/results/143383981266477766-software-engineering-intern-ms-summer-2024?utm_medium=direct_message&utm_source=email&utm_campaign=SWEInternMS2024-postevent&src=Online/TOPs/NA%20Tech%20University%20Email">Software Engineering Intern, MS, Summer 2024 </a>- USA</li>
+                                        <li><a href="https://www.google.com/about/careers/applications/jobs/results/73133752416379590-software-developer-intern-ms-summer-2024?utm_medium=direct_message&utm_source=email&utm_campaign=SWEInternMS2024Canada-postevent&src=Online/TOPs/NA%20Tech%20University%20Email">Software Developer Intern, MS, Summer 2024 </a>- Canada</li>
+                                        <li><a href="https://www.google.com/about/careers/applications/jobs/results/90355085214655174-software-engineering-intern-phd-summer-2024?utm_medium=direct_message&utm_source=email&utm_campaign=SWEInternPhD2024-postevent&src=Online/TOPs/NA%20Tech%20University%20Email">Software Engineering Intern, PhD, Summer 2024 </a>- USA</li>
+                                        <li><a href="https://www.google.com/about/careers/applications/jobs/results/112996546481398470-software-developer-intern-phd-summer-2024?utm_medium=direct_message&utm_source=email&utm_campaign=SWEInternPhD2024Canada-postevent&src=Online/TOPs/NA%20Tech%20University%20Email">Software Developer Intern, PhD, Summer 2024 </a>- Canada</li>
+                                    </ul>
+                                <li><a style="font-weight:bold" href="https://buildyourfuture.withgoogle.com/programs/step">STEP (Student Training in Engineering Program)</a></li>
+                                    <ul>
+                                        <li><a href="https://www.google.com/about/careers/applications/jobs/results/97288107323204294-step-intern-firstyear-student-summer-2024?utm_medium=direct_message&utm_source=email&utm_campaign=STEPFirstYear2024-postevent&src=Online/TOPs/NA%20Tech%20University%20Email">STEP Intern, First Year, Summer 2024</a> - USA</li>
+                                        <li><a href="https://www.google.com/about/careers/applications/jobs/results/124653568759079622-step-intern-secondyear-student-summer-2024?utm_medium=direct_message&utm_source=email&utm_campaign=STEPSecondYear2024-postevent&src=Online/TOPs/NA%20Tech%20University%20Email">STEP Intern, Second Year, Summer 2024</a> - USA</li>
+                                        <li><a href="https://www.google.com/about/careers/applications/jobs/results/88626154719584966-step-intern-secondyear-student-summer-2024?utm_medium=direct_message&utm_source=email&utm_campaign=STEP2024Canada-postevent&src=Online/TOPs/NA%20Tech%20University%20Email">STEP Intern, Second-Year Student, Summer 2024 </a>- Canada</li>
+                                    </ul>
+                                <li><a style="font-weight:bold" href="https://careers.google.com/programs/bold/">BOLD (Build Opportunities for Leadership & Development)</a></li>
+                                    <ul>
+                                        <li><a href="https://www.google.com/about/careers/applications/jobs/results/100237950991639238-bold-intern-summer-2024?utm_medium=direct_message&utm_source=email&utm_campaign=BOLDIntern2024-postevent&src=Online/TOPs/NA%20Tech%20University%20Email">BOLD Intern, Summer 2024</a></li>
+                                    </ul>
+                            </ul>
+                        <li><b>Now Open! Monday, October 2 - Friday, November 13</b></li>
+                            <ul>
+                                <li><a href="https://www.google.com/about/careers/applications/jobs/results/93100368180716230-mba-intern-summer-2024?utm_medium=direct_message&utm_source=email&utm_campaign=MBAIntern2024-postevent&src=Online/TOPs/NA%20Tech%20University%20Email">MBA Internship, Summer 2024</a></li>
+                            </ul>
+                    </ul>
                 </div>
 
 
