--- a/opportunities.html
+++ b/opportunities.html
@@ -159,7 +159,7 @@
                         </tbody>
                     </table>
                 </div> -->
-                <button type="button" class="collapsible">Sanofi Workshop Series: Top Tips & Tricks to Showcase Your Expertise in a Job Interview!</button>
+                <button type="button" style="margin:10px;" class="collapsible">Sanofi Workshop Series: Top Tips & Tricks to Showcase Your Expertise in a Job Interview!</button>
                 <div class="content">
                     <!img src="img/marketing/PwC.png" width="100%" height="650">
                     <p>Sanofi is hosting the second of a three part development workshop series for the Fall 2023 season, <b>NA Sanofi Workshop Series: Top Tips & Tricks to Showcase Your Expertise in a Job Interview!</b> </p>
@@ -172,7 +172,7 @@
                     <p>Please make sure to complete your registration <b>on or before October 3, 2023 at 5pm EST. </b></p>
                 </div>
 
-                <button type="button" class="collapsible">Google Summer 2024 Internship Opportunities!</button>
+                <button type="button" style="margin:10px;" class="collapsible">Google Summer 2024 Internship Opportunities!</button>
                 <div class="content">
                     <!img src="img/marketing/PwC.png" width="100%" height="650">
                     <p>If you are graduating December 2024 or later check out these Summer 
@@ -243,7 +243,7 @@
                     }
                     </script>
                 
-                <p class="align"><i>Last updated: October 1, 2023</i></p>
+                <p class="align"><i>Last updated: October 28, 2023</i></p>
             </div>     
         </section>
 	</main>
